<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_input_muse_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_muse_title_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:hint="@string/muse_title_input_hint"
        app:layout_constraintEnd_toEndOf="@+id/bt_add_new_muse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bt_add_new_muse"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_muse_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/muse_description_input_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:hint="@string/muse_description_hint"
        app:layout_constraintEnd_toEndOf="@+id/bt_add_new_muse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bt_add_new_muse"
        app:layout_constraintTop_toBottomOf="@+id/et_input_muse_title" />

    <Button
        android:id="@+id/bt_add_new_muse"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="76dp"
        android:hint="@string/save_muse_bt_hint"
        app:layout_constraintTop_toBottomOf="@+id/et_muse_description"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>